<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.eurodyn.qlack</groupId>
  <artifactId>qlack</artifactId>
  <version>3.0.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <modules>
    <module>QLACK-Common</module>
    <module>QLACK-Util</module>
    <module>QLACK-Fuse</module>
  </modules>

  <properties>
    <java.version>1.8</java.version>
    <maven.compiler.version>3.6.2</maven.compiler.version>
    <spring.boot.version>2.1.2.RELEASE</spring.boot.version>
    <mapstruct.version>1.2.0.Final</mapstruct.version>
    <commons.collections.version>3.2.2</commons.collections.version>
    <javax.inject.version>1</javax.inject.version>
    <beanshell.version>2.0b4</beanshell.version>
    <apache.email.version>1.5</apache.email.version>
    <apache.poi.version>3.9</apache.poi.version>
    <jackson.datatype.version>2.9.8</jackson.datatype.version>
    <apache.tika.version>1.12</apache.tika.version>
    <google.zxing.version>3.3.3</google.zxing.version>
    <sensesecure.version>0.5</sensesecure.version>
    <bohnman.jackson.version>1.3.14</bohnman.jackson.version>
    <lombok.version>1.18.4</lombok.version>
    <querydsl.version>4.2.1</querydsl.version>
    <jrebel.version>1.1.8</jrebel.version>
    <apt-maven-plugin.version>1.1.3</apt-maven-plugin.version>
    <bouncycastle.version>1.60</bouncycastle.version>
    <cxf.version>3.2.7</cxf.version>
    <maven-compiler-plugin.version>${spring.boot.version}</maven-compiler-plugin.version>
    <mysql.version>8.0.14</mysql.version>
    <rest-assured.version>3.2.0</rest-assured.version>
    <hibernate.version>5.3.7.Final</hibernate.version>
    <hikaricp.version>3.2.0</hikaricp.version>
    <liquibase.version>3.6.2</liquibase.version>
    <h2.version>1.4.197</h2.version>
    <jwt.version>0.9.1</jwt.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Spring Boot -->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring.boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- QLACK dependencies -->
      <dependency>
        <groupId>com.eurodyn.qlack.common</groupId>
        <artifactId>qlack-common</artifactId>
      </dependency>
      <dependency>
        <groupId>com.eurodyn.qlack.util</groupId>
        <artifactId>qlack-util-querydsl</artifactId>
      </dependency>

      <!-- Other dependencies -->
      <dependency>
        <groupId>org.mapstruct</groupId>
        <artifactId>mapstruct-processor</artifactId>
        <version>${mapstruct.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mapstruct</groupId>
        <artifactId>mapstruct</artifactId>
        <version>${mapstruct.version}</version>
      </dependency>
      <dependency>
        <groupId>commons-collections</groupId>
        <artifactId>commons-collections</artifactId>
        <version>${commons.collections.version}</version>
      </dependency>
      <dependency>
        <groupId>javax.inject</groupId>
        <artifactId>javax.inject</artifactId>
        <version>${javax.inject.version}</version>
      </dependency>
      <dependency>
        <groupId>org.beanshell</groupId>
        <artifactId>bsh-core</artifactId>
        <version>${beanshell.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-email</artifactId>
        <version>${apache.email.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.poi</groupId>
        <artifactId>poi</artifactId>
        <version>${apache.poi.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.poi</groupId>
        <artifactId>poi-ooxml</artifactId>
        <version>${apache.poi.version}</version>
      </dependency>
      <dependency>
        <groupId>org.elasticsearch</groupId>
        <artifactId>elasticsearch</artifactId>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.datatype</groupId>
        <artifactId>jackson-datatype-jsr310</artifactId>
        <version>${jackson.datatype.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.tika</groupId>
        <artifactId>tika-core</artifactId>
        <version>${apache.tika.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.zxing</groupId>
        <artifactId>core</artifactId>
        <version>${google.zxing.version}</version>
      </dependency>
      <dependency>
        <groupId>io.sensesecure</groupId>
        <artifactId>clamav4j</artifactId>
        <version>${sensesecure.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.bohnman</groupId>
        <artifactId>squiggly-filter-jackson</artifactId>
        <version>${bohnman.jackson.version}</version>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
        <scope>provided</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <!-- Global configuration for the compiler -->
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven.compiler.version}</version>
          <configuration>
            <compilerArgs>
              <!-- The -parameters argument is crucial for the correct function
               of the authentication interceptor, due to heavy use of the Reflection API -->
              <arg>-parameters</arg>
            </compilerArgs>
            <showDeprecation>true</showDeprecation>
            <source>${java.version}</source>
            <target>${java.version}</target>
            <encoding>UTF-8</encoding>
            <useIncrementalCompilation>false</useIncrementalCompilation>
            <annotationProcessorPaths>
              <annotationProcessorPath>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
              </annotationProcessorPath>
              <annotationProcessorPath>
                <groupId>com.querydsl</groupId>
                <artifactId>querydsl-jpa-codegen</artifactId>
                <version>${querydsl.version}</version>
              </annotationProcessorPath>
              <annotationProcessorPath>
                <groupId>com.querydsl</groupId>
                <artifactId>querydsl-apt</artifactId>
                <classifier>jpa</classifier>
                <version>${querydsl.version}</version>
              </annotationProcessorPath>
              <annotationProcessorPath>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
              </annotationProcessorPath>
            </annotationProcessorPaths>
          </configuration>
        </plugin>

        <!-- JRebel -->
        <plugin>
          <groupId>org.zeroturnaround</groupId>
          <artifactId>jrebel-maven-plugin</artifactId>
          <version>${jrebel.version}</version>
          <configuration>
            <alwaysGenerate>true</alwaysGenerate>
          </configuration>
          <executions>
            <execution>
              <id>generate-rebel-xml</id>
              <phase>process-resources</phase>
              <goals>
                <goal>generate</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.zeroturnaround</groupId>
        <artifactId>jrebel-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <!--<optional>true</optional>-->
    </dependency>
  </dependencies>
</project>